<resources>
    <string name="app_name">PriorityToDo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_login_title">登入</string>
    <string name="login_input_account_hint">輸入帳號</string>
    <string name="login_input_password_hint">請輸入密碼</string>
    <string name="drawerlayout_home_title">狀態</string>
    <string name="drawerlayout_todo_list">列表</string>
    <string name="drawerlayout_setting">設定</string>
    <string name="add_account_password_again">再次確認密碼</string>
    <string name="add_account_confirm">確認</string>
    <string name="login_no_account">沒有帳號</string>
    <string name="add_account_input_user_name">輸入姓名</string>
    <string name="add_account_title">新增帳號</string>
    <string name="add_task_task_title">標題</string>
    <string name="add_task_title_input_hint">輸入標題</string>
    <string name="add_task_content_title">內容</string>
    <string name="add_task_content_input_hint">輸入內容</string>
    <string name="add_task_end_date">結束時間</string>
    <string name="tv_add_task_priority_title">優先級</string>
    <string name="add_task_category">分類</string>
    <string name="add_task_subtask_title">子任務</string>
    <string name="add_task_subtask_content">子任務名稱</string>
    <string name="add_task_add_sign">+</string>
    <string name="common_search">搜尋</string>
    <string name="common_ok">ok</string>
    <string name="common_delete">刪除</string>
    <string name="common_formatted_date">%1$d-%2$02d-%3$s</string>
    <string name="add_task_input_title_hint">請輸入標題</string>
    <string name="add_task_content_titile_hint">請輸入內容</string>
    <string name="add_task_subtask_input_hint">請輸入子標題</string>
    <string name="add_task_add_success">新增任務成功</string>
    <string name="home_24hour_due_date_todo_item">沒有24小時內到期的任務</string>
    <string name="row_item_remain_time">剩餘時間</string>
    <string name="remain_time_format">%s %02d:%02d</string>
    <string name="update_task_modife_success">修改成功</string>
    <string name="update_task_delete_success">刪除成功</string>
    <string name="update_task_recover_hint">復原</string>
    <string-array name="todo_item_priority">
        <item>高</item>
        <item>中</item>
        <item>低</item>
    </string-array>

    <string-array name="todo_item_category">
        <item>工作</item>
        <item>個人</item>
    </string-array>
</resources>