<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.ui.fragment.AddTaskFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_add_task_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_add_task_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_add_task_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <TextView
                android:id="@+id/tv_add_task_title"
                style="@style/CustomTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task_task_title"
                app:layout_constraintBaseline_toBaselineOf="@+id/til_add_task_title_layout"
                app:layout_constraintStart_toStartOf="@+id/gl_add_task_start" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_task_title_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/add_task_title_input_hint"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@+id/gl_add_task_end"
                app:layout_constraintHorizontal_weight="0.7"
                app:layout_constraintStart_toEndOf="@+id/tv_add_task_title"
                app:layout_constraintTop_toTopOf="@+id/gl_add_task_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_add_task_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="26sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_add_task_content_title"
                style="@style/CustomTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task_content_title"
                app:layout_constraintBaseline_toBaselineOf="@+id/til_add_task_content_title_layout"
                app:layout_constraintStart_toStartOf="@+id/gl_add_task_start" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_task_content_title_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/add_task_content_input_hint"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@+id/gl_add_task_end"
                app:layout_constraintHorizontal_weight="0.7"
                app:layout_constraintStart_toEndOf="@+id/tv_add_task_title"
                app:layout_constraintTop_toBottomOf="@+id/til_add_task_title_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_add_task_content_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="26sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_add_task_end_date_title"
                style="@style/CustomTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_task_end_date"
                app:layout_constraintStart_toStartOf="@+id/gl_add_task_start"
                app:layout_constraintTop_toTopOf="@+id/tv_add_task_end_date" />

            <TextView
                android:id="@+id/tv_add_task_end_date"
                style="@style/CustomTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/tv_add_task_end_date_title"
                app:layout_constraintTop_toBottomOf="@+id/til_add_task_content_title_layout"
                tools:text="2024-07-11" />

            <TextView
                android:id="@+id/tv_add_task_priority_title"
                style="@style/CustomTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_add_task_priority_title"
                app:layout_constraintStart_toStartOf="@+id/gl_add_task_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_task_end_date_title" />

            <Spinner
                android:id="@+id/sp_add_task_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/todo_item_priority"
                app:layout_constraintTop_toTopOf="@+id/tv_add_task_priority_title"
                app:layout_constraintStart_toEndOf="@+id/tv_add_task_priority_title"/>


            <TextView
                android:id="@+id/tv_add_task_category_title"
                style="@style/CustomTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_task_category"
                app:layout_constraintStart_toStartOf="@+id/gl_add_task_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_task_priority_title" />

            <Spinner
                android:id="@+id/sp_add_task_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/todo_item_category"
                app:layout_constraintTop_toTopOf="@+id/tv_add_task_category_title"
                app:layout_constraintStart_toEndOf="@+id/tv_add_task_category_title"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_add_task_placeholder_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/gl_add_task_start"
                app:layout_constraintEnd_toEndOf="@+id/gl_add_task_end"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_task_category_title">
                <TextView
                    android:id="@+id/tv_add_task_placeholder_title"
                    style="@style/CustomTextViewTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_task_subtask_title"
                    app:layout_constraintBaseline_toBaselineOf="@+id/til_add_task_placeholder_title_layout"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_add_task_placeholder_title_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/add_task_subtask_content"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="0.7"
                    app:layout_constraintStart_toEndOf="@+id/tv_add_task_placeholder_title"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_add_task_placeholder_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="26sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_add_task_sub_task_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/cl_add_task_placeholder_title"
                app:layout_constraintStart_toStartOf="@+id/gl_add_task_start"
                app:layout_constraintEnd_toEndOf="@+id/gl_add_task_end">


            </LinearLayout>

            <Button
                android:id="@+id/btn_add_task_add_subtask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_task_add_sign"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_add_task_sub_task_layout"
                app:layout_constraintStart_toStartOf="@+id/gl_add_task_start"
                app:layout_constraintEnd_toEndOf="@+id/gl_add_task_end"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</layout>